updated glossary definitions

--- a/_posts/glossary-terms/2016-07-29-term-rai.md
+++ b/_posts/glossary-terms/2016-07-29-term-rai.md
@@ -6,4 +6,4 @@ category: glossary-terms
 
 # Risk Assessment Instrument (RAI)
 
-This tool evaluates arrested youth to see if they need secure lock up. In most cases it assures objectivity and uniformity for this process.
+This is a set of questions that helps the justice system decide if a youth should be placed in lock up. It is meant to help the justice system treat all youth fairly.
